--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                             <h4>An Innovative Technique for Next-Generation Radio Astronomy</h4>
                                     </div>
                                         <p>
-                                            Although there is an abundance of plane-of-sky magnetic field observations associated with molecular clouds, observations of their line-of-sight magnetic fields (B<sub>los</sub>) are extremely limited. To address this issue, I <a href = "https://ui.adsabs.harvard.edu/abs/2018A%26A...614A.100T/abstract" target="_blank"> pioneered a novel technique (named MC-BLOS)</a> based on Faraday rotation to determine B<sub>los</sub> associated with molecular clouds, outpacing Zeeman measurements. Faraday rotation is the rotation of the polarization plane of a linearly polarized electromagnetic wave as it passes through a magneto-ionic medium. 
+                                            Although there is an abundance of plane-of-sky magnetic field observations associated with molecular clouds, observations of their line-of-sight magnetic fields (B<sub>los</sub>) are extremely limited. To address this issue, I pioneered a <a href = "https://ui.adsabs.harvard.edu/abs/2018A%26A...614A.100T/abstract" target="_blank"> technique (named MC-BLOS)</a> based on Faraday rotation to determine B<sub>los</sub> associated with molecular clouds, outpacing Zeeman measurements. Faraday rotation is the rotation of the polarization plane of a linearly polarized electromagnetic wave as it passes through a magneto-ionic medium. 
                                     </p>
                                     <a href="#research1" class="image fit"><img src="images/BLOS.png" alt="" /></a>
                                     <div class="inner">
@@ -329,12 +329,14 @@
                         <div class="features">
                             <h4>Teaching</h4>
                             <article id="teaching">
-                                <!-- <a href="#teaching_outreach" class="image"><img src="images/OrionA3D.png" alt="" /></a> -->
+                                <a href="class_preview" class="image"><img src="images/MTahani_KeplerLecture.png" alt="Preview of lecture slides" /></a>
+                                <div class="inner">
                                     <p>
-                                        I have taught twice as a Sessional Instructor at the University of Calgary, where I was responsible for all aspects of course delivery, including lecture preparation, course design, content development, and assessment creation. I also have served as a teaching assistant and guest lecturer in various courses across multiple universities, teaching in two languages (English and Farsi/Persian).
+                                        I have taught twice as a Sessional Instructor at the University of Calgary, where I was responsible for all aspects of course delivery, including course design. I also have served as a teaching assistant and guest lecturer in various courses across multiple universities, teaching in two languages (English and Farsi/Persian). If you'd like to use any of my course material (with attribution) please don't hesitate to contact me. Access the slides from one of my recent lectures <a href="" target="_blank">here</a>.
                                     </p>
-                                    <p>  
-                                        I have received teaching awards, most notably from the <a href="https://taylorinstitute.ucalgary.ca/" target="_blank">Taylor Institute for Teaching and Learning</a> at the University of Calgary. My teaching portfolio includes courses such as: 
+                                </div>
+                                    <p style="margin-top: 1em;">  
+                                        I have received teaching awards, most notably from the <a href="https://taylorinstitute.ucalgary.ca/" target="_blank">Taylor Institute for Teaching and Learning</a> at the University of Calgary. My teaching portfolio includes 14 different courses such as: 
                                         Introduction to Astronomy, Introduction to Astrophysics, Electromagnetism & Thermal Physics, Optics and Electromagnetism, Introduction to Optics and Waves, Electromagnetic Theory, 
                                         Computational Physics I & II, First/Second Year Physics, and Physical Optics. 
                                     </p>
@@ -358,7 +360,8 @@
                         <h3>Contact</h3>
                         <p><strong>Email:</strong> mtahani[at]stanford.edu</p>
                         <p>
-                            I am passionate about discussing my research and have delivered around 90 invited and contributed conference talks, colloquia, and seminars. If you would like to learn more about my work, please don't hesitate to get in touch.
+                            <!-- I am passionate about discussing my research and have delivered around 90 invited and contributed conference talks, colloquia, and seminars. If you would like to learn more about my work, please don't hesitate to get in touch. -->
+                            I love sharing scientific ideas and engaging in science discussions. I've had the opportunity to give more than 90 invited and contributed conference talks, colloquia, and seminars, many of which have led to enjoyable collaborations. If you're interested in my research or would like to use my presentation materials (with attribution), please don't hesitate to reach out.
                         </p>
                     </div>
                 </section>
