--- a/index.html
+++ b/index.html
@@ -266,12 +266,14 @@
                         <h2>Software</h2>
                         <div class="features">
                             <article id="software">
-                                <!-- <a href="#software" class="image"><img src="images/OrionA3D.png" alt="" /></a> -->
-                                    <h4>MC-BLOS For Next-Generation Radio Observations</h4>
+                                <h4>MC-BLOS For Next-Generation Radio Observations</h4>
+                                <div class="inner">
                                     <p>
-                                        We have developed the <a href="https://ui.adsabs.harvard.edu/abs/2024arXiv240713005T/abstract" target="_blank">MC-BLOS software</a> to determine line-of-sight magnetic fields in molecular clouds, enhancing our understanding of interstellar magnetism. The software is available on <a href="https://github.com/MehrnooshTahani/MC-BLOS" target="_blank">GitHub</a>.
+                                        We have developed the <a href="https://ui.adsabs.harvard.edu/abs/2024arXiv240713005T/abstract" target="_blank">MC-BLOS software</a> to determine line-of-sight magnetic fields (Blos) in molecular clouds, enhancing our understanding of interstellar magnetism. The software is open-source and available on <a href="https://github.com/MehrnooshTahani/MC-BLOS" target="_blank">GitHub</a>.  It carries out the <a href="https://ui.adsabs.harvard.edu/abs/2018A%26A...614A.100T/abstract" target="_blank">2018 technique</a> mentioned <a href="#research1">above</a> automatically. With the upcoming surge in radio observations from new telescopes such as the Square Kilometre Array and its pathfinders, MC-BLOS will enable high-resolution magnetic field mapping across numerous molecular clouds.
                                     </p>
-                                    <h4>BLOSMapping</h4>
+                                </div>
+                                <a href="software" class="image"><img src="images/MCBLOS_Logo.jpg" alt="MC-BLOS Software logo" /></a>
+                                    <h4 style="margin-top: 3em;">BLOSMapping</h4>
                                         <p>
                                             The BLOSMapping software complements MC-BLOS by offering more flexibility in selecting OFF points. It serves as an earlier version of our current tools. BLOSMapping is accessible through the <a href="https://ascl.net/2201.003" target="_blank">Astrophysics Source Code Library</a> and <a href="https://github.com/MehrnooshTahani/MappingBLOS_MolecularClouds" target="_blank">GitHub</a>.
                                         </p>
@@ -329,10 +331,10 @@
                         <div class="features">
                             <h4>Teaching</h4>
                             <article id="teaching">
-                                <a href="class_preview" class="image"><img src="images/MTahani_KeplerLecture.png" alt="Preview of lecture slides" /></a>
+                                <a href="teaching" class="image"><img src="images/MTahani_KeplerLecture.png" alt="Preview of lecture slides" /></a>
                                 <div class="inner">
                                     <p>
-                                        I have taught twice as a Sessional Instructor at the University of Calgary, where I was responsible for all aspects of course delivery, including course design. I also have served as a teaching assistant and guest lecturer in various courses across multiple universities, teaching in two languages (English and Farsi/Persian). If you'd like to use any of my course material (with attribution) please don't hesitate to contact me. Access the slides from one of my recent lectures <a href="" target="_blank">here</a>.
+                                        I have taught twice as a Sessional Instructor at the University of Calgary, where I was responsible for all aspects of course delivery, including course design. I also have served as a teaching assistant and guest lecturer in various courses across multiple universities, teaching in two languages (English and Farsi/Persian). If you'd like to use any of my course material (with attribution) please don't hesitate to contact me. Access the slides from one of my recent lectures <a href="https://github.com/MehrnooshTahani/mehrnooshtahani.github.io/blob/main/MTahani_KeplerLecture.pdf" target="_blank">here</a>.
                                     </p>
                                 </div>
                                     <p style="margin-top: 1em;">  
