--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                                     Haleh Hajizadeh, <span style="font-size: 0.75em;">PhD student, University of Calgary, Canada</span><br>
                                     Khwaish Billore, <span style="font-size: 0.75em;">Undergraduate student, Stanford, USA</span><br>
                                     Minjie Lei, <span style="font-size: 0.75em;">PhD Candidate, Stanford, USA</span><br>
-                                    Mohammad Reza Nasirzadeh, <span style="font-size: 0.75em;">research assistant, IPM, Iran</span><br>
+                                    <!-- Mohammad Reza Nasirzadeh, <span style="font-size: 0.75em;">research assistant, IPM, Iran</span><br> -->
                                 </p>
                                 <h5>Alumni:</h5>
                                 <p>
