minor change to index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <h3>Mehrnoosh Tahani </h3>
                         </header>
                         <p> 
-                            Welcome to my webpage! Starting August 2025, I will be joining the University of South Carolina as an Assistant Professor in the Department of Physics and Astronomy.
+                            Welcome to my webpage! <!-- Starting August 2025, I will be joining the University of South Carolina as an Assistant Professor in the Department of Physics and Astronomy. -->
 
                             Currently, I am a <a href="https://banting.fellowships-bourses.gc.ca/en/app-dem_overview-apercu.html" target="_blank">Banting Fellow</a>, sponsored by the Canadian government. With the privilege of conducting research at any eligible university worldwide as a Banting Fellow, I chose Stanford University, where I also hold a Kavli Institute for Particle Astrophysics and Cosmology (KIPAC) fellowship. I previously held a research associate position (Covington Fellow) at the <a href="https://nrc.canada.ca/en/research-development/nrc-facilities/dominion-radio-astrophysical-observatory-research-facility" target="_blank">Dominion Radio Astrophysical Observatory</a> with the National Research Council Canada (<a href="https://nrc.canada.ca/en/research-development/research-collaboration/research-centres/herzberg-astronomy-astrophysics-research-centre"  target="_blank">NRC-Herzberg</a>). 
                         </p>
