mc-blos address

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                                         We have developed the <a href="https://ui.adsabs.harvard.edu/abs/2024arXiv240713005T/abstract" target="_blank">MC-BLOS software</a> to determine line-of-sight magnetic fields (Blos) in molecular clouds, enhancing our understanding of interstellar magnetism. The software is open-source and available on <a href="https://github.com/MehrnooshTahani/MC-BLOS" target="_blank">GitHub</a>.  It carries out the <a href="https://ui.adsabs.harvard.edu/abs/2018A%26A...614A.100T/abstract" target="_blank">2018 technique</a> mentioned <a href="#research1">above</a> automatically. With the upcoming surge in radio observations from new telescopes such as the Square Kilometre Array and its pathfinders, MC-BLOS will enable high-resolution magnetic field mapping across numerous molecular clouds.
                                     </p>
                                 </div>
-                                <a href="software" class="image"><img src="images/MCBLOS_Logo.jpg" alt="MC-BLOS Software logo" /></a>
+                                <a href="https://github.com/MehrnooshTahani/MC-BLOS" class="image"><img src="images/MCBLOS_Logo.jpg" alt="MC-BLOS Software logo" /></a>
                                     <h4 style="margin-top: 3em;">BLOSMapping</h4>
                                         <p>
                                             The BLOSMapping software complements MC-BLOS by offering more flexibility in selecting OFF points. It serves as an earlier version of our current tools. BLOSMapping is accessible through the <a href="https://ascl.net/2201.003" target="_blank">Astrophysics Source Code Library</a> and <a href="https://github.com/MehrnooshTahani/MappingBLOS_MolecularClouds" target="_blank">GitHub</a>.
