adding dragonfly pol link to index.html

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
                             <h3>Mehrnoosh Tahani </h3>
                         </header>
                         <p> 
-                            Welcome to my webpage! <!-- Starting August 2025, I will be joining the University of South Carolina as an Assistant Professor in the Department of Physics and Astronomy. -->
+                            Welcome to my webpage! Starting August 2025, I will be joining the University of South Carolina as an Assistant Professor in the Department of Physics and Astronomy. 
 
                             Currently, I am a <a href="https://banting.fellowships-bourses.gc.ca/en/app-dem_overview-apercu.html" target="_blank">Banting Fellow</a>, sponsored by the Canadian government. With the privilege of conducting research at any eligible university worldwide as a Banting Fellow, I chose Stanford University, where I also hold a Kavli Institute for Particle Astrophysics and Cosmology (KIPAC) fellowship. I previously held a research associate position (Covington Fellow) at the <a href="https://nrc.canada.ca/en/research-development/nrc-facilities/dominion-radio-astrophysical-observatory-research-facility" target="_blank">Dominion Radio Astrophysical Observatory</a> with the National Research Council Canada (<a href="https://nrc.canada.ca/en/research-development/research-collaboration/research-centres/herzberg-astronomy-astrophysics-research-centre"  target="_blank">NRC-Herzberg</a>). 
                         </p>
                         <p>    
-                            My research explores the magnetic universe through observations, theory, simulations, and instrumentation. I study how galaxies evolve to form stars by mapping interstellar magnetic fields. These field geometries act as cosmic time capsules, revealing the history of galaxies much like a dye reveals hidden patterns, offering valuable insights into our cosmic origins.
+                            My research explores the magnetic universe through observations, theory, simulations, and instrumentation. I study how galaxies evolve to form stars by mapping interstellar magnetic fields. These field geometries act as cosmic time capsules, revealing the history of galaxies much like a dye reveals hidden patterns, offering valuable insights into our cosmic origins. 
                         </p>
                     </div>
                 </section>
@@ -78,7 +78,7 @@
                             Research & Publications
                         </h2>
                             <h5>
-                                <b>I highlight some of my work below. For a full list of publications, please click on 
+                                <b> These days I am focusing on <a href="https://dragonflypol.github.io/DragonflyPol/" target="_blank">Dragonfly Polarimetry</a>, please check our website <a href="https://dragonflypol.github.io/DragonflyPol/" target="_blank">here</a>.  I highlight some of my general work below. For a full list of publications, please click on 
                                     <a href="https://ui.adsabs.harvard.edu/public-libraries/3whtBFLQRRW_e_qRFf9Z-g" target="_blank">this ADS link</a>
                                     or visit my <a href="https://scholar.google.com/citations?user=vF8y-rcAAAAJ&hl=en" target="_blank">Google Scholar profile</a>.
                                 </b>
