--- a/index.html
+++ b/index.html
@@ -78,10 +78,14 @@
                             Research & Publications
                         </h2>
                             <h5>
-                                <b> These days I am focusing on <a href="https://dragonflypol.github.io/DragonflyPol/" target="_blank">Dragonfly Polarimetry</a>, please check our website <a href="https://dragonflypol.github.io/DragonflyPol/" target="_blank">here</a>.  I highlight some of my general work below. For a full list of publications, please click on 
+                                <b> 
+                                    Currently, my primary focus is on <a href="https://dragonflypol.github.io/DragonflyPol/" target="_blank" style="color: #0011cc;">Dragonfly Polarimetry</a>, an innovative wide-field optical polarimetry project. You can learn more about this exciting collaboration on our <a href="https://dragonflypol.github.io/DragonflyPol/" target="_blank">project website</a>. Below, I highlight some of my broader research contributions. For a comprehensive list of publications, please visit my <a href="https://ui.adsabs.harvard.edu/public-libraries/3whtBFLQRRW_e_qRFf9Z-g" target="_blank">ADS library</a> or <a href="https://scholar.google.com/citations?user=vF8y-rcAAAAJ&hl=en" target="_blank">Google Scholar profile</a>. 
+                                </b>  
+                                <!-- <b>
+                                I highlight some of my general work below. For a full list of publications, please click on 
                                     <a href="https://ui.adsabs.harvard.edu/public-libraries/3whtBFLQRRW_e_qRFf9Z-g" target="_blank">this ADS link</a>
                                     or visit my <a href="https://scholar.google.com/citations?user=vF8y-rcAAAAJ&hl=en" target="_blank">Google Scholar profile</a>.
-                                </b>
+                                </b> -->
                             </h5>
                                                             
                             <div class="features">
