update index.html USC position

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                             <h3>Mehrnoosh Tahani </h3>
                         </header>
                         <p> 
-                            Welcome to my webpage! Starting August 2025, I will be joining the University of South Carolina as an Assistant Professor in the Department of Physics and Astronomy. 
+                            Welcome to my webpage! I'm an Assistant Professor at the University of South Carolina in the Department of Physics and Astronomy. 
 
-                            Currently, I am a <a href="https://banting.fellowships-bourses.gc.ca/en/app-dem_overview-apercu.html" target="_blank">Banting Fellow</a>, sponsored by the Canadian government. With the privilege of conducting research at any eligible university worldwide as a Banting Fellow, I chose Stanford University, where I also hold a Kavli Institute for Particle Astrophysics and Cosmology (KIPAC) fellowship. I previously held a research associate position (Covington Fellow) at the <a href="https://nrc.canada.ca/en/research-development/nrc-facilities/dominion-radio-astrophysical-observatory-research-facility" target="_blank">Dominion Radio Astrophysical Observatory</a> with the National Research Council Canada (<a href="https://nrc.canada.ca/en/research-development/research-collaboration/research-centres/herzberg-astronomy-astrophysics-research-centre"  target="_blank">NRC-Herzberg</a>). 
+                            Previously, I was a <a href="https://banting.fellowships-bourses.gc.ca/en/app-dem_overview-apercu.html" target="_blank">Banting Fellow</a>, sponsored by the Canadian government. With the privilege of conducting research at any eligible university worldwide as a Banting Fellow, I chose Stanford University, where I also held a Kavli Institute for Particle Astrophysics and Cosmology (KIPAC) fellowship. I previously held a research associate position (Covington Fellow) at the <a href="https://nrc.canada.ca/en/research-development/nrc-facilities/dominion-radio-astrophysical-observatory-research-facility" target="_blank">Dominion Radio Astrophysical Observatory</a> with the National Research Council Canada (<a href="https://nrc.canada.ca/en/research-development/research-collaboration/research-centres/herzberg-astronomy-astrophysics-research-centre"  target="_blank">NRC-Herzberg</a>). 
                         </p>
                         <p>    
                             My research explores the magnetic universe through observations, theory, simulations, and instrumentation. I study how galaxies evolve to form stars by mapping interstellar magnetic fields. These field geometries act as cosmic time capsules, revealing the history of galaxies much like a dye reveals hidden patterns, offering valuable insights into our cosmic origins. 
@@ -281,7 +281,9 @@
                                 <a href="https://github.com/MehrnooshTahani/MC-BLOS" class="image"><img src="images/MCBLOS_Logo.jpg" alt="MC-BLOS Software logo" /></a>
                                     <h4 style="margin-top: 3em;">BLOSMapping</h4>
                                         <p>
-                                            The BLOSMapping software complements MC-BLOS by offering more flexibility in selecting OFF points. It serves as an earlier version of our current tools. BLOSMapping is accessible through the <a href="https://ascl.net/2201.003" target="_blank">Astrophysics Source Code Library</a> and <a href="https://github.com/MehrnooshTahani/MappingBLOS_MolecularClouds" target="_blank">GitHub</a>.
+                                            Welcome to my webpage! I'm an Assistant Professor at the University of South Carolina in the Department of Physics and Astronomy. I obtained my PhD from the University of Calgary.
+                                            
+                                            Previously, I was a <a href="https://banting.fellowships-bourses.gc.ca/en/app-dem_overview-apercu.html" target="_blank">Banting Fellow</a>, sponsored by the Canadian government. With the privilege of conducting research at any eligible university worldwide as a Banting Fellow, I chose Stanford University, where I also held a Kavli Institute for Particle Astrophysics and Cosmology (KIPAC) fellowship. Prior to that, I held a research associate position (Covington Fellow) at the <a href="https://nrc.canada.ca/en/research-development/nrc-facilities/dominion-radio-astrophysical-observatory-research-facility" target="_blank">Dominion Radio Astrophysical Observatory</a> with the National Research Council Canada (<a href="https://nrc.canada.ca/en/research-development/research-collaboration/research-centres/herzberg-astronomy-astrophysics-research-centre" target="_blank">NRC-Herzberg</a>).
                                         </p>
                             </article>
                         </div>
@@ -299,28 +301,31 @@
                             <article>
                                 <h5>Current:</h5>
                                 <p>
-                                    Fyza Parviz Jazra, <span style="font-size: 0.75em;">research assistant, Stanford, USA</span><br>
+                                    Vishwa Koshene Gamage, <span style="font-size: 0.75em;">PhD student, University of South Carolina, USA</span><br>
+                                    Paras Regmi, <span style="font-size: 0.75em;">PhD student, University of South Carolina, USA</span><br>
+                                    Khwaish Billore, <span style="font-size: 0.75em;">Undergraduate student, Stanford University, USA</span><br>
+                                    Mohammad Reza Nasirzadeh, <span style="font-size: 0.75em;">research assistant, IPM</span><br>
                                     Haleh Hajizadeh, <span style="font-size: 0.75em;">PhD student, University of Calgary, Canada</span><br>
-                                    Khwaish Billore, <span style="font-size: 0.75em;">Undergraduate student, Stanford, USA</span><br>
-                                    Minjie Lei, <span style="font-size: 0.75em;">PhD Candidate, Stanford, USA</span><br>
+                                    Minjie Lei, <span style="font-size: 0.75em;">PhD candidate, Stanford University, USA</span><br>
                                     <!-- Mohammad Reza Nasirzadeh, <span style="font-size: 0.75em;">research assistant, IPM, Iran</span><br> -->
                                 </p>
                                 <h5>Alumni:</h5>
                                 <p>
-                                    Anthony Nunez, <span style="font-size: 0.75em;">Undergraduate student, Stanford, USA</span><br>
-                                    Carlos Rodriguez, <span style="font-size: 0.75em;">undergraduate student, Stanford, USA</span><br>
-                                    Charles Feng Yang, <span style="font-size: 0.75em;">PhD rotation student, Stanford, USA</span><br>
+                                    Fyza Parviz Jazra, <span style="font-size: 0.75em;">research assistant, Stanford University, USA</span><br>
+                                    Anthony Nunez, <span style="font-size: 0.75em;">Undergraduate student, Stanford University, USA</span><br>
+                                    Carlos Rodriguez, <span style="font-size: 0.75em;">undergraduate student, Stanford University, USA</span><br>
+                                    Charles Feng Yang, <span style="font-size: 0.75em;">PhD rotation student, Stanford University, USA</span><br>
                                     Gabriel Munoz Zarazua, <span style="font-size: 0.75em;">Undergraduate student, California State University, USA; Now graduate student at Cal State University</span><br>
-                                    Gabriel Munoz Zarazua, <span style="font-size: 0.75em;">Undergraduate student, California-Bridge program, Stanford, USA</span><br>
-                                    George Halal, <span style="font-size: 0.75em;">PhD candidate, Stanford, USA</span><br>
+                                    Gabriel Munoz Zarazua, <span style="font-size: 0.75em;">Undergraduate student, California-Bridge program, Stanford University, USA</span><br>
+                                    George Halal, <span style="font-size: 0.75em;">PhD candidate, Stanford University, USA</span><br>
                                     Gisselle Jimenez, <span style="font-size: 0.75em;">Undergraduate student, California-Bridge program, USA</span><br>
                                     Hsin-Yu Chen, <span style="font-size: 0.75em;">Undergraduate student, National Taiwan University, Taiwan</span><br>
                                     Jennifer Glover, <span style="font-size: 0.75em;">co-op student, National Research Council Canada, DRAO, Canada; Now MSc student at McGill University</span><br>
                                     John Ming Ngo, <span style="font-size: 0.75em;">co-op student, National Research Council Canada, DRAO, Canada; Now MSc student at the University of Alberta</span><br>
                                     Lucas Bayouri, <span style="font-size: 0.75em;">MSc intern student, Nagoya University, Japan</span><br>
                                     Matthew Bouchard, <span style="font-size: 0.75em;">Undergraduate student, University of Calgary, Canada</span><br>
-                                    Patrick Tupoumalohi, <span style="font-size: 0.75em;">Undergraduate student, Stanford, USA</span><br>
-                                    Ryan Anthony Clairmont, <span style="font-size: 0.75em;">Undergraduate student, Stanford, USA</span><br>
+                                    Patrick Tupoumalohi, <span style="font-size: 0.75em;">Undergraduate student, Stanford University, USA</span><br>
+                                    Ryan Anthony Clairmont, <span style="font-size: 0.75em;">Undergraduate student, Stanford University, USA</span><br>
                                     Violet Zhou, <span style="font-size: 0.75em;">undergraduate student, Stanford, USA</span><br>
                                     Wednesday Lupypciw, <span style="font-size: 0.75em;">co-op student, National Research Council Canada, DRAO, Canada</span>
                                 </p>
