Stanford to USC update

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <header>
                 <span class="image avatar"><img src="images/MehrnooshTahani.jpeg" alt="Mehrnoosh Tahani" /></span>
                 <h1 id="logo"><a href="#Mehrnoosh Tahani">Mehrnoosh Tahani</a></h1>
-                <p>Astrophysicist  <br> Stanford University 
+                <p>Astrophysicist  <br> University of South Carolina</p>
             </header>
 
             <nav id="nav">
@@ -311,7 +311,7 @@
                                 </p>
                                 <h5>Alumni:</h5>
                                 <p>
-                                    Fyza Parviz Jazra, <span style="font-size: 0.75em;">research assistant, Stanford University, USA</span><br>
+                                    Fyza Parviz Jazra, <span style="font-size: 0.75em;">research assistant (cultural astronomy), Stanford University, USA</span><br>
                                     Anthony Nunez, <span style="font-size: 0.75em;">Undergraduate student, Stanford University, USA</span><br>
                                     Carlos Rodriguez, <span style="font-size: 0.75em;">undergraduate student, Stanford University, USA</span><br>
                                     Charles Feng Yang, <span style="font-size: 0.75em;">PhD rotation student, Stanford University, USA</span><br>
@@ -371,7 +371,7 @@
                 <section id="contact">
                     <div class="container">
                         <h3>Contact</h3>
-                        <p><strong>Email:</strong> mtahani[at]stanford.edu</p>
+                        <p><strong>Email:</strong> mtahani[at]mailbox.sc.edu</p>
                         <p>
                             <!-- I am passionate about discussing my research and have delivered around 90 invited and contributed conference talks, colloquia, and seminars. If you would like to learn more about my work, please don't hesitate to get in touch. -->
                             I love sharing scientific ideas and engaging in science discussions. I've had the opportunity to give more than 90 invited and contributed conference talks, colloquia, and seminars, many of which have led to enjoyable collaborations. If you're interested in my research or would like to use my presentation materials (with attribution), please don't hesitate to reach out.
